# Garage_Management_System

./: README.md
day01/: REAEME.md  a.out  test.cpp  test2.cpp
day02/: Makefile  README.md  test.cpp
day02/Feng_ming_qi/: README.md  f_m_q.cpp
day02/Read_Key_State/: README.md  a.out  r.cpp  read_key_state.cpp
day02/light/: README.md  a.out  light.cpp
day02/makefile_demo/: Makefile  Makefile1  README.md  bubble_sort.cpp  bubble_sort.h  main.cpp
day03/: README.md  db.cpp  libsqlite3-0_3.27.2-3+deb10u1_i386.deb  libsqlite3-dev_3.27.2-3+deb10u1_i386.deb  makefile  parking.cpp  parking.db
day04/: README.md
day04/project/: CMakeLists.txt  db.h  main.cpp  makefile  parking.db
resource/: README.md
scoure/: 停车场管理系统笔记.docx
scoure/SQLite3/: sqlite3_3.27.2-3+deb10u1_i386.deb
